Remove NodePropertyWriter.java as a copy